--- a/_posts/1912-07-24-out-to-sea.md
+++ b/_posts/1912-07-24-out-to-sea.md
@@ -5,10 +5,10 @@ cover: 'assets/images/waves.jpg'
 navigation: True
 title: Out to Sea
 date: 1912-07-24 10:18:00
-tags: fiction
+tags: technology
 class: post-template
 subclass: 'post tag-fiction'
-author: edgar
+author: jnan
 ---
 
 I had this story from one who had no business to tell it to me, or to any other. I may credit the seductive influence of an old vintage upon the narrator for the beginning of it, and my own skeptical incredulity during the days that followed for the balance of the strange tale.
