--- a/_posts/2017-07-27-welcome.md
+++ b/_posts/2017-07-27-welcome.md
@@ -5,10 +5,10 @@ cover:  assets/images/welcome.jpg
 navigation: True
 title: Welcome to Ghost
 date: 2017-07-27 10:00:00
-tags: [Getting started]
+tags: [blog-tech]
 class: post-template
 subclass: 'post tag-getting-started'
-author: ghost
+author: jnan
 ---
 
 Hey! Welcome to Ghost, it's great to have you :)
