March Reading Post
Updated image extension.

--- a/_posts/2018-03-11-reads-march-2018.md
+++ b/_posts/2018-03-11-reads-march-2018.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 current: post
-cover:  assets/images/p-reading-list-march.jpg
+cover:  assets/images/p-reading-list-march.png
 navigation: True
 title: Best Reads of March 2018
 date: 2018-03-11 10:00:00
