--- a/_posts/2019-09-30-what-i-am-reading_09_2019.md
+++ b/_posts/2019-09-30-what-i-am-reading_09_2019.md
@@ -14,6 +14,7 @@ Article - LinkedIn
 Article - LinkedIn
 
 ***
+Test Change
 Liked this post? You can subscribe to my monthly newsletter [here](http://go.jdnayak.com/2hDwHVw). The newsletter contains my new posts and some interesting reads from across the web. I never send more than one newsletter in a month.
 
 Author — Jnanadarshan Nayak
