--- a/_posts/2019-09-30-what-i-am-reading-10_2019.md
+++ b/_posts/2019-09-30-what-i-am-reading-10_2019.md
@@ -11,7 +11,7 @@ subclass: 'post tag-reads'
 author: jnan
 ---
 ### What is this?
-Every month I read hundreds of articles, blogs across the web and few of them have really good and others should know about those. I share those articles here. I also post about the books I'm reading so you can read if you find them useful.
+Every month, I read hundreds of articles, blogs across the web and few of them have really good and others should know about those. I share those articles here. I also post about the books I'm reading so you can read if you find them useful.
 
 ### Top Picks
 1.[Management] McKinsey Insights - [Sales-force productivity in India: How the best organizations go from chasing targets to creating value](https://www.mckinsey.com/business-functions/marketing-and-sales/our-insights/sales-force-productivity-in-india-how-the-best-organizations-go-from-chasing-targets-to-creating-value)
